replays/errorlog-20181106-195318-0500-1541551998-32-32-0.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    for next in current.get_surrounding_cardinals()
                                                  ^
SyntaxError: invalid syntax

